Fix center aligned card on login page

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -169,6 +169,12 @@ oe-verification-grid {
   }
 }
 
+body:has(#login-page) {
+    .card-header {
+        align-items: start !important;
+    }
+}
+
 .oe-header {
     z-index: 1000;
 }
